--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,3 +4,6 @@ version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.11"
+dependencies = [
+    "streamlit>=1.43.2",
+]
