--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,14 @@
+altair==5.5.0
 anyio==4.8.0
 asttokens==3.0.0
+attrs==25.3.0
 beautifulsoup4==4.13.3
+blinker==1.9.0
 bs4==0.0.2
+cachetools==5.5.2
 certifi==2025.1.31
+charset-normalizer==3.4.1
+click==8.1.8
 comm==0.2.2
 contourpy==1.3.1
 cycler==0.12.1
@@ -10,6 +16,8 @@ debugpy==1.8.12
 decorator==5.2.1
 executing==2.2.0
 fonttools==4.56.0
+gitdb==4.0.12
+gitpython==3.1.44
 h11==0.14.0
 html5lib==1.1
 httpcore==1.0.7
@@ -17,14 +25,19 @@ httpx==0.28.1
 idna==3.10
 ipykernel==6.29.5
 ipython==9.0.1
-ipython_pygments_lexers==1.1.1
+ipython-pygments-lexers==1.1.1
 jedi==0.19.2
-jupyter_client==8.6.3
-jupyter_core==5.7.2
+jinja2==3.1.6
+jsonschema==4.23.0
+jsonschema-specifications==2024.10.1
+jupyter-client==8.6.3
+jupyter-core==5.7.2
 kiwisolver==1.4.8
 lxml==5.3.1
+markupsafe==3.0.2
 matplotlib==3.10.1
 matplotlib-inline==0.1.7
+narwhals==1.30.0
 nest-asyncio==1.6.0
 numpy==2.2.3
 packaging==24.2
@@ -32,26 +45,40 @@ pandas==2.2.3
 parso==0.8.4
 pexpect==4.9.0
 pillow==11.1.0
+pip==25.0.1
 platformdirs==4.3.6
-prompt_toolkit==3.0.50
+prompt-toolkit==3.0.50
+protobuf==5.29.3
 psutil==7.0.0
 ptyprocess==0.7.0
-pure_eval==0.2.3
-Pygments==2.19.1
+pure-eval==0.2.3
+pyarrow==19.0.1
+pydeck==0.9.1
+pygments==2.19.1
 pyparsing==3.2.1
 python-dateutil==2.9.0.post0
 python-decouple==3.8
 python-dotenv==1.0.1
 pytz==2025.1
 pyzmq==26.2.1
+referencing==0.36.2
+requests==2.32.3
+rpds-py==0.23.1
 seaborn==0.13.2
+setuptools==66.1.1
 six==1.17.0
+smmap==5.0.2
 sniffio==1.3.1
 soupsieve==2.6
 stack-data==0.6.3
+streamlit==1.43.2
+tenacity==9.0.0
+toml==0.10.2
 tornado==6.4.2
 traitlets==5.14.3
-typing_extensions==4.12.2
+typing-extensions==4.12.2
 tzdata==2025.1
+urllib3==2.3.0
+watchdog==6.0.0
 wcwidth==0.2.13
 webencodings==0.5.1
